syntax = "proto3";

package tracking;

service TrackingsService {
  rpc UpdateByProductId (UpdateByProductIdReq) returns (res) {}
}

message UpdateByProductIdReq {
  string productId = 1;
  string actionTime = 2;
  message actions {
    int32 searching = 1;
    int32 filtering = 2;
    int32 viewing = 3;
  }
}

message res {
  
}